Add trending fyccons to documentation

--- a/fycons.html
+++ b/fycons.html
@@ -431,6 +431,10 @@
                 <input type="text" readonly="readonly" value="icon-storify">
               </li>
               <li>
+                <div class="icon fycon-icon-trending"></div>
+                <input type="text" readonly="readonly" value="icon-trending">
+              </li>
+              <li>
                 <div class="icon fycon-icon-wall"></div>
                 <input type="text" readonly="readonly" value="icon-wall">
               </li>
@@ -533,6 +537,10 @@
               <li>
                 <div class="icon fycon-logo-streamhub"></div>
                 <input type="text" readonly="readonly" value="logo-streamhub">
+              </li>
+              <li>
+                <div class="icon fycon-logo-trending"></div>
+                <input type="text" readonly="readonly" value="logo-trending">
               </li>
               <li>
                 <div class="icon fycon-logo-windows"></div>
