Add folder fycon

--- a/fycons.html
+++ b/fycons.html
@@ -3,7 +3,7 @@
   <head>
     <title>Livefyre Bootstrap Developer Docs</title>
     <!-- <link href="../../dist/all.css" rel="stylesheet"> -->
-    <link rel="stylesheet" href="http://livefyre-cdn.s3.amazonaws.com/libs/livefyre-bootstrap/v1.4.4/livefyre-bootstrap.min.css">
+    <link rel="stylesheet" href="http://livefyre-cdn.s3.amazonaws.com/libs/livefyre-bootstrap/v1.4.5/livefyre-bootstrap.min.css">
     <link rel="stylesheet" href="css/docs.css">
     <link rel="stylesheet" href="css/fycon.css">
   </head>
@@ -313,6 +313,10 @@
               <li>
                 <div class="icon fycon-film"></div>
                 <input type="text" readonly="readonly" value="film">
+              </li>
+              <li>
+                <div class="icon fycon-folder"></div>
+                <input type="text" readonly="readonly" value="folder">
               </li>
               <li>
                 <div class="icon fycon-form-checkbox-active"></div>
