--- a/fycons.html
+++ b/fycons.html
@@ -3,7 +3,7 @@
   <head>
     <title>Livefyre Bootstrap Developer Docs</title>
     <!-- <link href="../../dist/all.css" rel="stylesheet"> -->
-    <link rel="stylesheet" href="http://livefyre-cdn.s3.amazonaws.com/libs/livefyre-bootstrap/v1.4.5/livefyre-bootstrap.min.css">
+    <link rel="stylesheet" href="http://livefyre-cdn.s3.amazonaws.com/libs/livefyre-bootstrap/v1.4.6/livefyre-bootstrap.min.css">
     <link rel="stylesheet" href="css/docs.css">
     <link rel="stylesheet" href="css/fycon.css">
   </head>
@@ -159,6 +159,10 @@
                 <input type="text" readonly="readonly" value="alert">
               </li>
               <li>
+                <div class="icon fycon-all-assets"></div>
+                <input type="text" readonly="readonly" value="all-assets">
+              </li>
+              <li>
                 <div class="icon fycon-analytics"></div>
                 <input type="text" readonly="readonly" value="analytics">
               </li>
@@ -269,6 +273,10 @@
               <li>
                 <div class="icon fycon-copy-to-clipboard"></div>
                 <input type="text" readonly="readonly" value="copy-to-clipboard">
+              </li>
+              <li>
+                <div class="icon fycon-crop"></div>
+                <input type="text" readonly="readonly" value="crop">
               </li>
               <li>
                 <div class="icon fycon-download"></div>
