Add folder-private and folder-restricted fycons.

--- a/fycons.html
+++ b/fycons.html
@@ -3,7 +3,7 @@
   <head>
     <title>Livefyre Bootstrap Developer Docs</title>
     <!-- <link href="../../dist/all.css" rel="stylesheet"> -->
-    <link rel="stylesheet" href="http://livefyre-cdn.s3.amazonaws.com/libs/livefyre-bootstrap/v1.4.6/livefyre-bootstrap.min.css">
+    <link rel="stylesheet" href="http://livefyre-cdn.s3.amazonaws.com/libs/livefyre-bootstrap/v1.4.8/livefyre-bootstrap.min.css">
     <link rel="stylesheet" href="css/docs.css">
     <link rel="stylesheet" href="css/fycon.css">
   </head>
@@ -324,6 +324,14 @@
               </li>
               <li>
                 <div class="icon fycon-folder"></div>
+                <input type="text" readonly="readonly" value="folder">
+              </li>
+              <li>
+                <div class="icon fycon-folder-private"></div>
+                <input type="text" readonly="readonly" value="folder">
+              </li>
+              <li>
+                <div class="icon fycon-folder-restricted"></div>
                 <input type="text" readonly="readonly" value="folder">
               </li>
               <li>
