Fix fycon class names

--- a/fycons.html
+++ b/fycons.html
@@ -328,11 +328,11 @@
               </li>
               <li>
                 <div class="icon fycon-folder-private"></div>
-                <input type="text" readonly="readonly" value="folder">
+                <input type="text" readonly="readonly" value="folder-private">
               </li>
               <li>
                 <div class="icon fycon-folder-restricted"></div>
-                <input type="text" readonly="readonly" value="folder">
+                <input type="text" readonly="readonly" value="folder-restricted">
               </li>
               <li>
                 <div class="icon fycon-form-checkbox-active"></div>
