Rough draft of 2.0.0 page

--- a/components.html
+++ b/components.html
@@ -17,6 +17,9 @@
           <li>
             <a href="fycons.html">Fycons</a>
           </li>
+          <li>
+            <a href="v2.html">Version 2.0.0!</a>
+          </li>
         </ul>
         <ul class="docs-nav right">
           <li>
