--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
           <li>
             <a href="fycons.html">Fycons</a>
           </li>
+          <li>
+            <a href="v2.html">Version 2.0.0!</a>
+          </li>
         </ul>
         <ul class="docs-nav right">
           <li>
