--- a/index.html
+++ b/index.html
@@ -37,15 +37,14 @@
       </div>
     </section>
 
-    <section>
-      <div class="container padded">
+    <div class="container">
+
+      <section>
         <h1 class="section-header">Purpose of this project</h1>
         <p>In an effort to streamline designs across an ever expanding suite of enterprise products, the cool kids in design drafted a UI guide. What resulted was a need for a core set of coded and reusable components that we could pass over to our bff's in engineering. Hate coding that same button/dropdown/menu everytime you start on a new project? You've come to the right place.</p>
-      </div>
-    </section>
+      </section>
 
-    <section>
-      <div class="container padded">
+      <section>
         <h1 class="section-header">Usage</h1>
         <p>Including livefyre-bootstrap in your next project is ezpz. In your <code>bower.json</code>, simply include the component and give yourself a <code>$ bower install</code> and you're almost there:</p>
         <pre>
@@ -56,22 +55,19 @@
         <p>
           Once you've included and installed the component via bower, attach the class <code>.lf</code> to your containing element (usually <code>&lt;html class="lf"&gt;</code>, or <code>&lt;body class="lf"&gt;</code>).
         </p>
-      </div>
-    </section>
+      </section>
 
-    <section>
-      <div class="container padded">
+      <section>
         <h1 class="section-header">Contributing</h1>
         <p>The livefyre-bootstrap repository sits on github and currently follows semver (sorta). If you find a bug or have a component request, please open an issue with any relevant information, markup, or screenshots.</p>
         <p>Do <strong>NOT</strong> push directly to <code>master</code>. Please create a <code>feature-branch</code> and submit a pull request. Jenkins watches master for builds, generates release tags, and builds gh-pages. <del>Zethus</del> Phil will cry when you pollute <code>master</code>. He will also ignore all future feature requests from violaters of this crime.</p>
-      </div>
-    </section>
+      </section>
 
-    <section>
-      <div class="container padded">
+      <section>
         <h1 class="section-header">Changelog</h1>
         <p>View <a href="https://github.com/Livefyre/livefyre-bootstrap/releases">releases</a> for changelog.</p>
-      </div>
-    </section>
+      </section>
+
+    </div>
   </body>
 </html>
