Nav sidebar copy update.

--- a/v2.html
+++ b/v2.html
@@ -47,7 +47,7 @@
         <div class="col-md-3 col-md-push-9">
           <div class="glossary" data-spy="affix" data-offset-top="200">
             <ul class="glossary-list">
-              <a href="#section-importing"><li class="list-first">Importing</li></a>
+              <a href="#section-importing"><li class="list-first">Importing Variables &amp; Mixins</li></a>
               <a href="#section-colors"><li>Colors</li></a>
               <a href="#section-checkboxes"><li>Checkboxes and Radios</li></a>
               <a href="#section-buttons"><li>Buttons</li></a>
