Update loader instructions.

--- a/v2.html
+++ b/v2.html
@@ -1297,7 +1297,7 @@ $('#element').tooltip(
               <code>loader</code> accepts two parameters: <code>elem</code> and <code>size</code> (optional).
               <ul>
                 <li><code>elem</code> expects an object or jQuery object</li>
-                <li><code>size</code> expects an <code>integer</code> divisible by 3 or one of three pre-canned sizes as a <code>string</code>: 'mini', 'small', or 'large'.</li>
+                <li><code>size</code> expects an <code>integer</code> or one of three pre-canned sizes as a <code>string</code>: 'mini', 'small', or 'large'.</li>
               </ul>
             </p>
             <div class="bs-example">
