--- a/components.html
+++ b/components.html
@@ -40,7 +40,7 @@
       <div class="row">
         <div class="col-md-3 col-md-push-9">
 
-          <div class="glossary">
+          <div class="glossary" data-spy="affix" data-offset-top="200">
             <ul class="glossary-list">
               <a href="#section-buttons" class=""><li class="list-first">Buttons</li></a>
               <a href="#section-button-groups"><li>Button Groups/Toolbars</li></a>
