Added browser support info to checkboxes

--- a/v2.html
+++ b/v2.html
@@ -284,12 +284,12 @@ https://cdn.rawgit.com/Livefyre/livefyre-bootstrap/2.0.0/dist/livefyre-bootstrap
               <div class="well">
                 <h3>Changes from v1.x</h3>
                 <ul class="descrip">
-                  <li>Checkboxes and radio buttons override browser default styles and are rendered using Fycons.</li>
+                  <li>Checkboxes and radio buttons override browser default styles and are rendered using Fycons. (Chrome and Safari only)</li>
                 </ul>
               </div>
             </div>
 
-            <p class="descrip">Checkboxes and radio buttons override browser default styles and are rendered using Fycons.</p>
+            <p class="descrip">Checkboxes and radio buttons override browser default styles and are rendered using Fycons. (Chrome and Safari only)</p>
             <div class="bs-example" data-example-id="block-checkboxes-radios">
               <form>
                 <div class="checkbox">
