New Designer Logo fycon. Update to 1.4.9

--- a/fycons.html
+++ b/fycons.html
@@ -3,7 +3,7 @@
   <head>
     <title>Livefyre Bootstrap Developer Docs</title>
     <!-- <link href="../../dist/all.css" rel="stylesheet"> -->
-    <link rel="stylesheet" href="http://livefyre-cdn.s3.amazonaws.com/libs/livefyre-bootstrap/v1.4.8/livefyre-bootstrap.min.css">
+    <link rel="stylesheet" href="http://livefyre-cdn.s3.amazonaws.com/libs/livefyre-bootstrap/v1.4.9/livefyre-bootstrap.min.css">
     <link rel="stylesheet" href="css/docs.css">
     <link rel="stylesheet" href="css/fycon.css">
   </head>
@@ -507,6 +507,10 @@
         <li>
           <span class="fycon-logo-counter" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="logo-counter">
+        </li>
+        <li>
+          <span class="fycon-logo-designer" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="logo-designer">
         </li>
         <li>
           <span class="fycon-logo-developers" aria-hidden="true"></span>
