Add update on checkbox and radio button focus styles.

--- a/v2.html
+++ b/v2.html
@@ -285,6 +285,7 @@ https://cdn.rawgit.com/Livefyre/livefyre-bootstrap/2.0.0/dist/livefyre-bootstrap
                 <h3>Changes from v1.x</h3>
                 <ul class="descrip">
                   <li>Checkboxes and radio buttons override browser default styles and are rendered using Fycons. (Chrome and Safari only)</li>
+                  <li>On focus, instead of displaying a fuzzy, blue halo, checkboxes and radio buttons turn blue to be more consistent with other form fields. (Chrome and Safari only)</li>
                 </ul>
               </div>
             </div>
