Fix sidebar nav in Safari.

--- a/components.html
+++ b/components.html
@@ -38,28 +38,9 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-md-3 col-md-push-9">
-
-          <div class="glossary" data-spy="affix" data-offset-top="200">
-            <ul class="glossary-list">
-              <a href="#section-buttons" class=""><li class="list-first">Buttons</li></a>
-              <a href="#section-button-groups"><li>Button Groups/Toolbars</li></a>
-              <a href="#section-labels"><li>Labels</li></a>
-              <a href="#section-badges"><li>Badges</li></a>
-              <a href="#section-alerts"><li>Alerts</li></a>
-              <a href="#section-avatars"><li>Avatars</li></a>
-              <a href="#section-toggles"><li>Toggles</li></a>
-              <a href="#section-tooltips"><li>Tooltips</li></a>
-              <a href="#section-popovers"><li>Popovers</li></a>
-              <a href="#section-modals"><li>Modals</li></a>
-              <a href="#section-loader"><li class="list-last">Loader</li></a>
-            </ul>
-          </div>
-
-        </div><!-- /.col -->
 
 
-        <div class="col-md-9 col-md-pull-3">
+        <div class="col-md-9">
 
           <section id="section-buttons">
             <h1 class="section-header">Buttons</h1>
@@ -517,6 +498,32 @@ loader.decorate($('#lfLoader-mini'), 'mini')</code></pre>
           </section>
 
         </div><!-- /.col -->
+
+
+        <!-- ANCHOR LINKS
+        - Unfortunately, these have to appear after the main content:
+        "Note: Do not use the affix plugin on an element contained in a relatively positioned element, 
+        such as a pulled or pushed column, due to a Safari rendering bug."
+        https://github.com/twbs/bootstrap/issues/12126
+        -->
+        <div class="col-md-3">
+          <div class="glossary" data-spy="affix" data-offset-top="200">
+            <ul class="glossary-list">
+              <a href="#section-buttons" class=""><li class="list-first">Buttons</li></a>
+              <a href="#section-button-groups"><li>Button Groups/Toolbars</li></a>
+              <a href="#section-labels"><li>Labels</li></a>
+              <a href="#section-badges"><li>Badges</li></a>
+              <a href="#section-alerts"><li>Alerts</li></a>
+              <a href="#section-avatars"><li>Avatars</li></a>
+              <a href="#section-toggles"><li>Toggles</li></a>
+              <a href="#section-tooltips"><li>Tooltips</li></a>
+              <a href="#section-popovers"><li>Popovers</li></a>
+              <a href="#section-modals"><li>Modals</li></a>
+              <a href="#section-loader"><li class="list-last">Loader</li></a>
+            </ul>
+          </div>
+        </div><!-- /.col -->
+
 
       </div><!-- /.row -->
     </div><!-- /.container -->
