Update no-data block with example of small fycons.

--- a/demos/kitchensink/bootstrap-tldr/app/index.html
+++ b/demos/kitchensink/bootstrap-tldr/app/index.html
@@ -304,13 +304,17 @@
             </div>
         </div>
 
-<!-- Designer --> 
+<!-- App Manager --> 
         <div class="row">
-            <div class="no-data">
-                <i class="fycon-collections"></i>
-                <h4 class="no-data-header">Select a collection to begin</h4>
-                <p>Your content will be previewed here with your selected styles and configuration applied.</p>
-            </div>
+          <div class="no-data">
+            <span class="fycon-icon-wall fycon-sm"></span>
+            <span class="fycon-icon-map fycon-sm"></span>
+            <span class="fycon-icon-polls fycon-sm"></span>
+            <span class="fycon-icon-chat fycon-sm"></span>
+            <h4 class="no-data-header">Welcome to Apps!</h4>
+            <p>Livefyre Apps allow you to interact with your readers in real-time and encourage customer engagement for every type of conversation and situation.</p>
+            <p><button type="button" class="btn btn-primary" data-action="undefined"><span class="fycon-plus"></span> Create an App</button></p>
+          </div>
         </div>
 
 <!-- Content --> 
