Add .modal-subheader option

--- a/v2.html
+++ b/v2.html
@@ -982,7 +982,7 @@ $('#element').tooltip(
                     <h4 class="modal-title">Modal title</h4>
                   </div>
                   <div class="modal-body">
-                    <h4>Subheader (h4)</h4>  
+                    <h4>Subheader (h4 or .modal-subheader)</h4>  
                     <p>Yr before they sold out mustache, kale chips butcher Austin Pork belly in the asymmetrical cardigan selvage Marfa messenger bag.</p>
                   </div>
                   <div class="modal-footer">
@@ -1002,7 +1002,7 @@ $('#element').tooltip(
       &lt;h4 class="modal-title"&gt;Modal title&lt;/h4&gt;
     &lt;/div&gt;
     &lt;div class="modal-body"&gt;
-      &lt;h4&gt;Subheader (h4)&lt;/h4&gt;
+      &lt;h4&gt;Subheader (h4 or .modal-subheader)&lt;/h4&gt;
       &lt;p&gt;...&lt;/p&gt;
     &lt;/div&gt;
     &lt;div class="modal-footer"&gt;
