Add Asset's Manager's 'Discover' fycon.

--- a/fycons.html
+++ b/fycons.html
@@ -3,7 +3,7 @@
   <head>
     <title>Livefyre Bootstrap Developer Docs</title>
     <!-- <link href="../../dist/all.css" rel="stylesheet"> -->
-    <link rel="stylesheet" href="http://livefyre-cdn.s3.amazonaws.com/libs/livefyre-bootstrap/v1.4.9/livefyre-bootstrap.min.css">
+    <link rel="stylesheet" href="http://livefyre-cdn.s3.amazonaws.com/libs/livefyre-bootstrap/v1.4.10/livefyre-bootstrap.min.css">
     <link rel="stylesheet" href="css/docs.css">
     <link rel="stylesheet" href="css/fycon.css">
   </head>
@@ -280,6 +280,11 @@
           <span class="fycon-crop" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="crop">
         </li>
+        <li>
+          <span class="fycon-discover" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="discover">
+        </li>
+        <li>
         <li>
           <span class="fycon-download" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="download">
