Add bounce animation to modal demo.

--- a/v2.html
+++ b/v2.html
@@ -1379,7 +1379,7 @@ loader.decorate($('#lfLoader-mini'), 'mini')</code></pre>
     </div><!-- /.container -->
     
     <div class="modal fade" id="lfModal" style="margin: 0 auto;">
-      <div class="modal-dialog modal-lg">
+      <div class="modal-dialog modal-lg animated">
         <div class="modal-content">
           <div class="modal-header">
             <button class="close" data-dismiss="modal">
