Update demo with Slats.

--- a/demos/kitchensink/bootswatch.html
+++ b/demos/kitchensink/bootswatch.html
@@ -112,6 +112,45 @@
       -->
 
 
+      <!-- LF: Slats
+      ================================================== -->
+      <div class="bs-docs-section clearfix">
+        <div class="row">
+
+          <div class="col-lg-12">
+            <div class="page-header">
+              <h1 id="navbar">Slats</h1>
+            </div>
+          </div>
+
+          <div class="bs-component">
+            <div class="slat slat-header slat-vertical-center">
+              <div class="col-xs-5">Title</div>
+              <div class="col-xs-5">Site</div>
+              <div class="col-xs-2">Date Modified</div>
+            </div>
+            <div class="slat slat-vertical-center">
+              <div class="col-xs-5 slat-title">Lorem Ipsum Dolor Sit Amet</div>
+              <div class="col-xs-5">Test Site</div>
+              <div class="col-xs-2">4 days ago</div>
+            </div>
+            <div class="slat slat-vertical-center">
+              <div class="col-xs-5 slat-title">Praesent vestibulum vulputate vehicula In orci diam, suscipit a ultrices et, mollis a turpis</div>
+              <div class="col-xs-5">Another Site</div>
+              <div class="col-xs-2">10 days ago</div>
+            </div>
+            <div class="slat slat-vertical-center slat-hover">
+              <div class="col-xs-5 slat-title">Suscipit a ultrices et, mollis a turpis</div>
+              <div class="col-xs-5">Another Site</div>
+              <div class="col-xs-2">7 months ago</div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+
+
       <!-- LF: Loader
       ================================================== -->
       <div class="bs-docs-section clearfix">
