Add fycons for Columns app, Mosaic app, new Google logo, others from 2.0

--- a/fycons.html
+++ b/fycons.html
@@ -3,7 +3,7 @@
   <head>
     <title>Livefyre Bootstrap Developer Docs</title>
     <!-- <link href="../../dist/all.css" rel="stylesheet"> -->
-    <link rel="stylesheet" href="http://livefyre-cdn.s3.amazonaws.com/libs/livefyre-bootstrap/v1.4.10/livefyre-bootstrap.min.css">
+    <link rel="stylesheet" href="http://livefyre-cdn.s3.amazonaws.com/libs/livefyre-bootstrap/v1.4.11/livefyre-bootstrap.min.css">
     <link rel="stylesheet" href="css/docs.css">
     <link rel="stylesheet" href="css/fycon.css">
   </head>
@@ -97,6 +97,10 @@
           <input type="text" readonly="readonly" value="action-etc">
         </li>
         <li>
+          <span class="fycon-action-etc-vertical" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="action-etc-vertical">
+        </li>
+        <li>
           <span class="fycon-action-favorite" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="action-favorite">
         </li>
@@ -179,6 +183,10 @@
         <li>
           <span class="fycon-arrow-back" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="arrow-back">
+        </li>
+        <li>
+          <span class="fycon-arrow-btn-picker" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="arrow-btn-picker">
         </li>
         <li>
           <span class="fycon-arrow-down" aria-hidden="true"></span>
@@ -284,7 +292,6 @@
           <span class="fycon-discover" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="discover">
         </li>
-        <li>
         <li>
           <span class="fycon-download" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="download">
@@ -410,6 +417,10 @@
           <input type="text" readonly="readonly" value="icon-chat">
         </li>
         <li>
+          <span class="fycon-icon-columns" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="icon-columns">
+        </li>
+        <li>
           <span class="fycon-icon-comments" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="icon-comments">
         </li>
@@ -440,6 +451,10 @@
         <li>
           <span class="fycon-icon-more" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="icon-more">
+        </li>
+        <li>
+          <span class="fycon-icon-mosaic" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="icon-mosaic">
         </li>
         <li>
           <span class="fycon-icon-polls" aria-hidden="true"></span>
@@ -506,6 +521,10 @@
           <input type="text" readonly="readonly" value="logo-chat">
         </li>
         <li>
+          <span class="fycon-logo-columns" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="logo-columns">
+        </li>
+        <li>
           <span class="fycon-logo-comments" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="logo-comments">
         </li>
@@ -544,6 +563,10 @@
         <li>
           <span class="fycon-logo-modq" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="logo-modq">
+        </li>
+        <li>
+          <span class="fycon-logo-mosaic" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="logo-mosaic">
         </li>
         <li>
           <span class="fycon-logo-polls" aria-hidden="true"></span>
@@ -654,6 +677,10 @@
           <input type="text" readonly="readonly" value="search">
         </li>
         <li>
+          <span class="fycon-search-happy" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="search-happy">
+        </li>
+        <li>
           <span class="fycon-settings-admin" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="settings-admin">
         </li>
@@ -698,8 +725,16 @@
           <input type="text" readonly="readonly" value="source-google">
         </li>
         <li>
+          <span class="fycon-source-google2" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="source-google2">
+        </li>
+        <li>
           <span class="fycon-source-googleplus" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="source-googleplus">
+        </li>
+        <li>
+          <span class="fycon-source-googleplus2" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="source-googleplus2">
         </li>
         <li>
           <span class="fycon-source-instagram" aria-hidden="true"></span>
